--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  background-color: #f5f6f7;
+}
+
+a,
+p,
+h6,
+h5,
+h4,
+h3,
+h2,
+h1 {
+  text-decoration: none;
+  margin: 0;
+}
+
+input:focus {
+  outline: none;
+}
+
+button {
+  cursor: pointer;
+  user-select: none;
+}
