--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,14 +1,13 @@
 <div class="logo" [routerLink]="'/'">
   <img src="https://thevpts.com/images/logos/logo.png" alt="Logo" />
-  <h1 class="site-title">Virtual Personal Trainer/Tutor</h1>
 </div>
 
 <div class="menu">
   <div class="menu-item">
-    <a href="">Keşfet</a>
+    <a href="">Biz</a>
   </div>
   <div class="menu-item">
-    <a [routerLink]="'courses'">Kurslar</a>
+    <a [routerLink]="'courses'">Eğitimler</a>
   </div>
   <div class="menu-item">
     <a [routerLink]="'contact'">İletişim</a>
