--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,5 +1,7 @@
 <app-hero></app-hero>
+<app-about></app-about>
 <app-top-categories></app-top-categories>
 <app-top-courses [title]="'Popüler Kurslar'"></app-top-courses>
 <app-top-courses [title]="'Yeni Kurslar'"></app-top-courses>
 <app-top-courses [title]="'En Çok Satanlar'"></app-top-courses>
+<app-footer></app-footer>
