--- a/src/app/components/top-courses-item/top-courses-item.component.scss
+++ b/src/app/components/top-courses-item/top-courses-item.component.scss
@@ -1,4 +1,5 @@
 :host {
+  background-color: #f5f6f7;
   margin: 0 1rem;
   width: 100%;
   display: flex;
@@ -9,7 +10,8 @@
   user-select: none;
   position: relative;
   overflow: hidden;
-  border: 1px solid #939393;
+  border: 1px solid #eaeaea;
+  box-shadow: 0 0.1rem 1rem rgba($color: #000000, $alpha: 0.1);
 
   transition: transform 0.2s;
 
