--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,3 +28,6 @@ button {
   cursor: pointer;
   user-select: none;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
