--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,5 @@
-<app-login-form></app-login-form>
+<img src="assets/images/login.svg" />
+
+<div class="form">
+  <app-login-form></app-login-form>
+</div>
