--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,1 +1,5 @@
-<p>register works!</p>
+<img src="assets/images/register.svg" />
+
+<div class="form">
+  <app-register-form></app-register-form>
+</div>
