--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -1,1 +1,3 @@
-<p>courses works!</p>
+<app-top-courses [title]="'Popüler Kurslar'"></app-top-courses>
+<app-top-courses [title]="'Yeni Kurslar'"></app-top-courses>
+<app-top-courses [title]="'En Çok Satanlar'"></app-top-courses>
