--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,7 +1,17 @@
 :host {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
-  height: 100%;
-  padding: 5rem;
+  height: calc(100% - 6rem);
+  padding: 0 5rem;
+
+  img {
+    width: 50%;
+  }
+
+  .form {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+  }
 }
