--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,1 +1,3 @@
-<p>contact works!</p>
+<app-contact-form></app-contact-form>
+<app-contact-cards></app-contact-cards>
+<app-contact-map></app-contact-map>
