--- a/src/app/components/user-course/user-course.component.html
+++ b/src/app/components/user-course/user-course.component.html
@@ -1,12 +1,24 @@
-<div class="card">
-	<img src="https://blog.comeup.com.tr/wp-content/uploads/2020/12/dogru-plank-durusu-nasil-olmali.jpg" alt="">
-	<div class="course">
-		<div class="title">
-			<h4>Lorem, ipsum.</h4>	
-		</div>
-		<div class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga, dolores?</div>
-		<div class="progress">
-			<progress id="file" value="24" max="100"> </progress>	
-		</div>
-	</div>	
+<img src="https://blog.comeup.com.tr/wp-content/uploads/2020/12/dogru-plank-durusu-nasil-olmali.jpg" alt="" />
+<h5 class="title">Test Kurs</h5>
+
+<div class="description">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, iure.</p>
+</div>
+
+<div class="middle">
+  <div class="length">
+    <i class="far fa-clock"></i>
+    <span>2h 16min</span>
+  </div>
+  <div class="quantity">
+    <i class="far fa-bookmark"></i>
+    <span>9.4</span>
+  </div>
+</div>
+
+<div class="line"></div>
+<div class="progress">
+  <progress id="file" max="100" value="70"></progress>
+  <p>%70</p>
+
 </div>
