--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -1,6 +1,6 @@
 <app-sidebar></app-sidebar>
 <div class="courses">
-	<h2>Aktif Kurslar</h2>
+	<h2 class="title">Aktif Kurslar</h2>
 	<app-user-course></app-user-course>
 	<app-user-course></app-user-course>
 	<app-user-course></app-user-course>
