--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,5 +1,7 @@
-	<div class="profile-picture">
+	<div class="profile">
 		<img src="./../../../assets/images/undraw_profile_pic_ic-5-t.svg" alt="">
+		<h2>İsim Soyisim</h2>
+		<p>Premium Üye</p>
 	</div>
 	<div class="menu">
 		<div class="menu-item">
