--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -8,12 +8,15 @@
 	background-color: white;
 	box-shadow: 0 0.2rem 2rem rgba($color: #000000, $alpha: 0.1);
 
-	.profile-picture {
-		border-radius: 50%;
+	.profile {
 		display: flex;
+		flex-direction: column;
+		align-items: center;
 		overflow: hidden;
 		img {
-			width: 100%;
+			border-radius: 50%;
+			width: 50%;
+			margin-bottom: 2rem;
 		}
 	}
 	.menu {
