--- a/src/app/pages/user-profile/user-profile.component.scss
+++ b/src/app/pages/user-profile/user-profile.component.scss
@@ -1,7 +1,14 @@
 :host {
 	display: flex;
+	justify-content: center;
 	padding: 5rem;
 	.courses {
 		margin-left: 5rem;
+	}
+	.title {
+		font-size: 2.4rem;
+		font-weight: 500;
+		margin-bottom: 4rem;
+		color: #232323;
 	}
 }
