--- a/src/app/components/course-description/course-description.component.html
+++ b/src/app/components/course-description/course-description.component.html
@@ -1,1 +1,6 @@
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique temporibus accusantium nulla perferendis eligendi molestiae, culpa nihil quibusdam recusandae vel impedit nostrum libero obcaecati, deserunt enim quaerat! Explicabo veniam aut illum eaque iure autem perspiciatis natus magnam distinctio! Obcaecati, fuga.</p>
+<div class="about">
+    <h3>Kurs Hakkında</h3>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt magni accusantium, maiores suscipit pariatur rem officiis omnis consectetur tenetur exercitationem et nisi ullam unde culpa vitae eaque nemo fugit natus odit placeat cum dolorem blanditiis. Nam obcaecati molestias quaerat blanditiis culpa aut debitis ullam laudantium sit consectetur unde repellendus, possimus doloremque beatae, dolores a iure atque! Magnam iste sit, vel, ratione enim blanditiis voluptate earum labore non natus, impedit odit facilis esse eligendi eos cum ipsa cupiditate! Tenetur fugit sit blanditiis veniam numquam molestias voluptatibus aspernatur esse, sequi facilis suscipit harum iste, excepturi, dolor ratione? Iste dolores suscipit debitis odit.
+    </p>
+</div>
