--- a/src/app/components/course-description/course-description.component.scss
+++ b/src/app/components/course-description/course-description.component.scss
@@ -1,4 +1,13 @@
 :host {
     display: flex;
     padding: 5rem;
+    
+    
+    
+    
+    .about {
+        h3 {
+            margin-bottom: 1rem;
+        }
+    }
 }
