--- a/src/app/components/course-main/course-main.component.scss
+++ b/src/app/components/course-main/course-main.component.scss
@@ -1,20 +1,22 @@
 :host {
-    padding: 3rem;
+    padding: 5rem;
     display: flex;
     justify-content: space-evenly;
+    
     img {
-        width: 50%;
-        height: fit-content;
+        width: 40%;
+        height: inherit;
     }
     .course-content {
+        
         padding: 2rem;
         border: 1px solid #eaeaea;
         border-radius: 1.2rem;
         box-shadow: 0 0.2rem 2rem rgba($color: #000000, $alpha: 0.1);
-        width: 30%;
+        width: 20%;
     
         .rating-stars {
-            margin-top: 1rem;
+            margin-top: 2rem;
         }
         .count-rating {
             margin-top: 1rem;
@@ -36,7 +38,7 @@
             padding: 0.5rem 1rem;
             color: white;
             background-color: #3eb489;
-            width: 18rem;
+            width: 70%;
             height: 3rem;
             font-size: 1rem;
           }
