--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,12 @@
   <div class="menu-item">
     <a [routerLink]="'contact'">İletişim</a>
   </div>
+  <div class="menu-item">
+    <a [routerLink]="'user'">[user]</a>
+  </div>
+  <div class="menu-item">
+    <a [routerLink]="'course-detail'">[course-detail]</a>
+  </div>
 </div>
 
 <div class="search">
