--- a/src/app/pages/course-detail/course-detail.component.html
+++ b/src/app/pages/course-detail/course-detail.component.html
@@ -1,2 +1,13 @@
-<app-course-main></app-course-main>
-<app-course-description></app-course-description>
+<div class="top">
+  <img
+    src="https://blog.comeup.com.tr/wp-content/uploads/2020/12/dogru-plank-durusu-nasil-olmali.jpg"
+    alt=""
+  />
+
+  <div class="title">
+    <h3>Kaan Kısacık ile Pilates'e Giriş - 101</h3>
+  </div>
+</div>
+
+<app-course-detail-description></app-course-detail-description>
+<app-course-detail-sidebar></app-course-detail-sidebar>
