--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -1,11 +1,8 @@
-<app-sidebar></app-sidebar>
+<app-user-sidebar></app-user-sidebar>
 <div class="courses">
-	<h2 class="title">Aktif Kurslar</h2>
-	<app-user-course></app-user-course>
-	<app-user-course></app-user-course>
-	<app-user-course></app-user-course>
-	<app-user-course></app-user-course>
-	<app-user-course></app-user-course>
-	<app-user-course></app-user-course>
-	<app-user-course></app-user-course>
+  <h2 class="title">Aktif Kurslar</h2>
+  <app-user-course></app-user-course>
+  <app-user-course></app-user-course>
+  <app-user-course></app-user-course>
+  <app-user-course></app-user-course>
 </div>
