--- a/src/app/components/user-course/user-course.component.html
+++ b/src/app/components/user-course/user-course.component.html
@@ -1,5 +1,8 @@
-<img src="https://blog.comeup.com.tr/wp-content/uploads/2020/12/dogru-plank-durusu-nasil-olmali.jpg" alt="" />
-<h5 class="title">Test Kurs</h5>
+<img
+  src="https://blog.comeup.com.tr/wp-content/uploads/2020/12/dogru-plank-durusu-nasil-olmali.jpg"
+  alt=""
+/>
+<h5 class="title">Pilates'e Giriş - 101</h5>
 
 <div class="description">
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, iure.</p>
@@ -12,13 +15,14 @@
   </div>
   <div class="quantity">
     <i class="far fa-bookmark"></i>
-    <span>9.4</span>
+    <span>6 Ders</span>
   </div>
 </div>
 
 <div class="line"></div>
 <div class="progress">
-  <progress id="file" max="100" value="70"></progress>
-  <p>%70</p>
+  <!-- <progress id="file" max="100" value="70"></progress> -->
+  <div class="Loading"></div>
 
+  <p>%70</p>
 </div>
