--- a/src/app/pages/course-detail/course-detail.component.scss
+++ b/src/app/pages/course-detail/course-detail.component.scss
@@ -1,4 +1,30 @@
 :host {
-    padding: 5rem;
+  .top {
+    position: relative;
+    height: 40vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    img {
+      position: absolute;
+      z-index: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
+    .title {
+      position: relative;
+      z-index: 1;
 
+      padding: 5rem 30rem 5rem 5rem;
+
+      h3 {
+        font-size: 2.4rem;
+        font-weight: 500;
+        color: white;
+        box-shadow: 0 0.1rem 1rem rgb(0 0 0 / 10%);
+      }
+    }
+  }
 }
