instructor global profile done (edit comments)

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,6 +18,12 @@
   <div class="menu-item">
     <a [routerLink]="'course-detail'">[course-detail]</a>
   </div>
+  <div class="menu-item">
+    <a [routerLink]="'instructor-profile'">[instructor-profile]</a>
+  </div>
+  <div class="menu-item">
+    <a [routerLink]="'instructor-global-profile'">[instructor-global-profile]</a>
+  </div>
 </div>
 
 <div class="search">
